--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="grid-component">
     <img routerLink="" class="logo" src="/assets/logo.png">
-    <button mat-button class="functionality" routerLink="/functionality">Partage de fichiers</button>
+    <button mat-button class="functionality" routerLink="/functionality" *ngIf="_auth.loggedIn()">Partage de fichiers</button>
     
 
     <button mat-button class="sign" routerLink="/signIn" *ngIf="!_auth.loggedIn()">Connexion</button>
