resolution affichage projet selectionne

--- a/src/app/home-page/profile/profile.component.css
+++ b/src/app/home-page/profile/profile.component.css
@@ -13,6 +13,10 @@
     padding: 2%;
 }
 
+.grid-component {
+    height: 800px;
+}
+
 .sidenav {
     background-color: darkgray;
     padding: 20px;
