correction taille profil page

--- a/src/app/home-page/content-mypage/content-mypage.component.html
+++ b/src/app/home-page/content-mypage/content-mypage.component.html
@@ -1,7 +1,7 @@
+<div class="page">
 <div class="grid-component">
     
     <h1>Page Personnelle</h1>  
-    <h2> Basic Info </h2>
     <table *ngFor="let userInfo of userInfo$ | async">
         <tr>
           <td class="basicinfo">Photo</td>
@@ -41,4 +41,5 @@
     </table>
     -->
     
+</div>
 </div>
