--- a/src/app/user-file/user-file.component.html
+++ b/src/app/user-file/user-file.component.html
@@ -1,6 +1,6 @@
 
 <div class="page">
-
+    <mat-progress-bar mode="determinate" [value]="progressbarValue"></mat-progress-bar>
     <div class="mainContainer">
       <div class="content">
           <div class="header">
@@ -19,7 +19,7 @@
                       <div class="custom-file">
                           <form action="/api/upload" method="post" enctype="multipart/form-data">
                               <input (change)="fileChange($event)" type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01">
-                              <input type="submit" mat-raised-button color="primary" class="input-group-text upload" (click)="upload()" (click)="refresh()" (click)="alertUpload()" id="btnUpload"  value="Upload"/>
+                              <input type="submit" mat-raised-button color="primary" class="input-group-text upload" (click)="upload()" (click)="refresh()" (click)="alertUpload()" (click)="startTimer()" id="btnUpload"  value="Upload"/>
 
                           </form>
                           <div class="input-group-prepend">
