timer upload en min sec

--- a/src/app/user-file/user-file.component.html
+++ b/src/app/user-file/user-file.component.html
@@ -2,6 +2,7 @@
 <div class="page">
     <h3 *ngIf="progressbarValue < 100">Upload en cours ...</h3>
     <mat-progress-bar mode="determinate" [value]="progressbarValue"></mat-progress-bar>
+    <p *ngIf="timeUpload && progressbarValue < 100"> Temps restant : {{ (timeUpload) }} minutes {{timeSecond}} secondes </p>
     <div class="mainContainer">
       <div class="content">
           <div class="header">
